Fix grid layout issue

--- a/css/style.css
+++ b/css/style.css
@@ -68,7 +68,7 @@ div.content {
 .brand-info {
   display: flex;
   width: 100%;
-  height: 80px;
+  height: 100px;
   justify-content: center;
 }
 
@@ -83,7 +83,6 @@ div.content {
 }
 
 .brand-img {
-
   height: 100%;
   width: auto;
   margin: 0 auto;
